add multirotation support
multi rotate angle center fix

--- a/notebooks/image-rotation-Copy1.ipynb
+++ b/notebooks/image-rotation-Copy1.ipynb
@@ -19,7 +19,7 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
-    "from images import mirror_border, img_float_to_uint8"
+    "from images import mirror_border, img_float_to_uint8, "
    ]
   },
   {
